# sgl-mindspore

./: README.md  README_zh.md  pyproject.toml  run_qwen_eagle3.py
doc/: PD_Disaggregation.md  mindspore_models.md  qwen3_moe.md
examples/: EAGLE3_STANDALONE_README.md  run_eagle3_standalone.py
patch/: 310p.patch
sgl_mindspore/: __init__.py  utils.py
sgl_mindspore/layers/: __init__.py  linear.py  rope.py
sgl_mindspore/layers/moe/: fused_moe.py
sgl_mindspore/models/: deepseekv3.py  llama.py  llama_eagle3.py  llama_eagle3_standalone.py  qwen3.py  qwen3_eagle3.py  qwen3_moe.py
