[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sgl_mindspore"]

[project]
name = "sgl-mindspore"
version = "0.0.1"
description = "A Python package for SGLang with MindSpore"
readme = "README.md"
authors = [
  { name = "chz34", email = "c-34@qq.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "sglang",
    "mindspore==2.8.0",
    "torch==2.8.0",
    "torch_npu==2.8.0",
    "torchvision",
    "triton-ascend",
    "pybind11",
]
